# polygon-research

./: .gitignore  README.md
experiment/claude-code-proxy/: docker-compose.yml
experiment/model-categorize/: 01-backend-connector-fix-claude.json  01-backend-connector-fix-claude.txt  01-backend-connector-fix-gemini.json  01-backend-connector-fix-gemini.txt  01-backend-connector-fix-glm.json  01-backend-connector-fix-glm.txt  01-backend-connector-fix-gpt.json  01-backend-connector-fix-gpt.txt  01-backend-connector-fix-minimax.json  01-backend-connector-fix-minimax.txt  01-frontend-button-fix-claude.json  01-frontend-button-fix-claude.txt  01-frontend-button-fix-gemini.json  01-frontend-button-fix-gemini.txt  01-frontend-button-fix-glm.json  01-frontend-button-fix-glm.txt  01-frontend-button-fix-gpt.json  01-frontend-button-fix-gpt.txt  01-frontend-button-fix-minimax.json  01-frontend-button-fix-minimax.txt  categories.json  result.py  (+2 more)
model-gateway/: .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml
model-gateway/src/: config.rs  handler.rs  main.rs  validation.rs
model-gateway/src/common/: clickhouse.rs  config.rs  postgres.rs  server.rs
model-gateway/src/database/clickhouse/: mod.rs  query_log.rs
model-gateway/src/database/clickhouse/migration/: m20250209_000000_create_query_log.rs  mod.rs
model-gateway/src/database/postgres/: key.rs  mod.rs
model-gateway/src/database/postgres/migration/: m20250209_000000_init_structure.rs  mod.rs
model-gateway/src/handler/: handler.rs  mod.rs  validation.rs
model-gateway/src/util/: mod.rs  parser.rs  sequence_id.rs
