[package]
name = "model-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ratatui = "0.28"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
tower = { version = "0.5", features = ["util"] }
